# terra_cognita

./: README.md  db.sqlite3  manage.py  pyproject.toml
main/: admin.py  mathutils.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_order_date.py  0003_order_is_cancelled.py  0004_auto_20231027_1722.py  0005_auto_20231027_2145.py  0006_satellite.py  0007_rename_satellite_satellitemodel.py  0008_auto_20231028_0915.py  0009_alter_order_photo.py  0010_alter_order_photo.py  0011_auto_20231028_0922.py  0012_alter_order_photo.py  0013_auto_20231028_0929.py  0014_auto_20231028_0930.py  0015_auto_20231028_0931.py  0016_auto_20231028_1038.py  0017_badzone.py  0018_rename_badzone_badzonemodel.py
main/static/css/: profile_style.css  style.css  styleguide.css
main/templates/main/: add.html  auth.html  base.html  index.html  profile.html
terra_cognita/: asgi.py  settings.py  urls.py  wsgi.py
